--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ a,a:hover,a:focus {
     margin-bottom:15px;
     border-radius:5px;
     -webkit-border-radius:5px;
-    border:1px solid #eaeaea;
+    border:1px solid #0000;
     box-shadow:none;
     font-size:12px;
 }
